# Server

./: .gitignore  CMakeLists.txt  as.sh  gs.sh  logger.sh  make.sh  mtest.sh  run.sh  stop.sh  test.sh
accountserver/: CMakeLists.txt  account_main.cpp  account_server.cpp  account_server.h
check/: check.sh  result.xml
client/: CMakeLists.txt  client_gate.cpp  client_gate.h  client_login.cpp  client_login.h  client_main.cpp  client_player.cpp  client_player.h
common/: command.h  common.h
config/: server.xml
gameserver/: CMakeLists.txt  game_gate_client.cpp  game_gate_client.h  game_login_client.cpp  game_login_client.h  game_main.cpp  game_server.cpp  game_server.h
gateserver/: CMakeLists.txt  gate_login_client.cpp  gate_login_client.h  gate_main.cpp  gate_server.cpp  gate_server.h
lib/: CMakeLists.txt  ScriptManager.cpp  ScriptManager.h  acceptor.cpp  acceptor.h  adlist.cpp  adlist.h  buffer.h  buffer_ex.cpp  buffer_ex.h  callback.h  channel.cpp  channel.h  cjson.cpp  cjson.h  condition.h  connector.cpp  connector.h  csv_parse.cpp  csv_parse.h  entry.h  entry_manager.h  event_loop.cpp  event_loop.h  event_loop_thread.cpp  event_loop_thread_pool.cpp  event_loop_thread_pool.h  helper.cpp  helper.h  inet_address.cpp  inet_address.h  logger.cpp  logger.h  memory_pool.cpp  memory_pool.h  message_queue.cpp  message_queue.h  mutex.h  mysql_pool.cpp  mysql_pool.h  (+41 more)
lib/test/: Makefile  blocking_queue_test.cpp  buffer_ex_test.cpp  csv_test.cpp  echo_client_test.cpp  echo_server_test  echo_server_test.cpp  event_loop_test  event_loop_test.cpp  event_loop_thread_pool_test  event_loop_thread_pool_test.cpp  event_loop_thread_test  event_loop_thread_test.cpp  file_util_test.cpp  inet_addr_test  inet_addr_test.cpp  list_test.cpp  logger_test.cpp  memory_pool_test.cpp  message_queueu_test.cpp  mysql_test.cpp  redis_test.cpp  signal_test  tcpclient_reg1_test.cpp  tcpclient_reg2_test.cpp  tcpclient_reg3_test.cpp  thread_test.cpp  threadpool_test.cpp  timer_queue_test.cpp  timer_test.cpp  var_type_test.cpp  xml_test.cpp
lib/test/files/: simple.csv
lib/test/log/: test.log.20170715-11  test.log.20170926-16  test.log.20170926-17  test.log.20170926-18
log/AS/: AS.log.20171104-14  AS.log.20171104-16  AS.log.20171106-10  AS.log.20171116-09  AS.log.20171116-10  AS.log.20171116-11  AS.log.20171122-15  AS.log.20171122-16  AS.log.20171129-10  AS.log.20171129-11  AS.log.20171129-14  AS.log.20171201-18  AS.log.20171209-14  AS.log.20171209-15  AS.log.20171209-16  AS.log.20171213-16  AS.log.20171214-16  AS.log.20180117-10  AS.log.20180117-11  AS.log.20180117-12  AS.log.20180117-14  AS.log.20180117-16  AS.log.20180118-02  AS.log.20180118-15  AS.log.20180118-18  AS.log.20180119-11  AS.log.20180119-12  AS.log.20180119-13  AS.log.20180119-18  AS.log.20180120-14  AS.log.20180120-15  AS.log.20180212-10  AS.log.20180212-15  AS.log.20180226-09  AS.log.20180226-19
log/GS1/: GS1.log.20171104-14  GS1.log.20171104-16  GS1.log.20171106-10  GS1.log.20171116-09  GS1.log.20171116-10  GS1.log.20171116-11  GS1.log.20171129-10  GS1.log.20171129-11  GS1.log.20171129-14  GS1.log.20171201-18  GS1.log.20171209-14  GS1.log.20171209-15  GS1.log.20171209-16  GS1.log.20171213-16  GS1.log.20171214-16  GS1.log.20180117-10  GS1.log.20180117-11  GS1.log.20180117-12  GS1.log.20180117-14  GS1.log.20180117-16  GS1.log.20180118-02  GS1.log.20180118-15  GS1.log.20180118-18  GS1.log.20180119-11  GS1.log.20180119-12  GS1.log.20180119-13  GS1.log.20180119-18  GS1.log.20180120-14  GS1.log.20180120-15  GS1.log.20180212-10  GS1.log.20180212-15  GS1.log.20180226-09  GS1.log.20180226-19
log/GW1/: GW1.log.20171104-16  GW1.log.20171106-10  GW1.log.20171116-09  GW1.log.20171116-10  GW1.log.20171116-11  GW1.log.20171129-10  GW1.log.20171129-11  GW1.log.20171129-14  GW1.log.20171201-18  GW1.log.20171209-14  GW1.log.20171209-15  GW1.log.20171209-16  GW1.log.20171213-16  GW1.log.20171214-16  GW1.log.20180117-10  GW1.log.20180117-11  GW1.log.20180117-12  GW1.log.20180117-14  GW1.log.20180117-16  GW1.log.20180118-02  (+13 more)
loginserver/: CMakeLists.txt  login_account_client.cpp  login_account_client.h  login_gate_parse.cpp  login_gate_parse.h  login_main.cpp  login_server.cpp  login_server.h  login_zone_info.h
proto/: gen.sh
script/: gw.sh  log_clear.sh  logger.sh  ls.sh  test2.sh
sql/: LBF.sql  LBF_Define.sql  dump.sh
study/StudentManage/: CMakeCache.txt  CMakeLists.txt  CmdProc.cpp  CmdProc.h  Input.cpp  Input.h  List.cpp  List.h  Makefile  Makefile.in  Node.cpp  Node.h  STMS.cpp  String.cpp  String.h  Student.txt  cmake_install.cmake
study/StudentManage/.deps/: CmdProc.Po  Input.Po  List.Po  Node.Po  STMS.Po  String.Po
study/lua_tolua++/tolua++/: CMakeLists.txt  README
study/sharedmemory/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  read.cpp  share_memory.cpp  share_memory.h  share_test.h  write.cpp
tools/: lua_tolua++.rar
(+243 files in other folders)
